--- a/config.springcloud-provider-payment-config.yml
+++ b/config.springcloud-provider-payment-config.yml
@@ -7,7 +7,7 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql:///springcloud_db?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
-    password: 20030209
+    password: xxxxxx
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
